refactor: change some variables names
