# src/modules/Usage/dtos/ICreateUsageDTO.ts
@@ -2,7 +2,7 @@ interface ICreateUsageDTO {
   driver_id: string;
   car_id: string;
   start_date?: Date;
-  motivo: string;
+  motivation: string;
   end_date?: Date;
 }
 
